...
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Listado de Compra"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtListadoCompra"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
...
