<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_home" android:icon="@drawable/ic_home" android:title="Home" />
        <item android:id="@+id/menu_products" android:icon="@android:drawable/ic_menu_search" android:title="Productos del Market" android:contentDescription="Products" />
        <item android:id="@+id/menu_list_purchase" android:icon="@drawable/ic_list" android:title="lista de Compra" />
        <item android:id="@+id/menu_shop" android:icon="@drawable/ic_shop" android:title="Historial de Compras Realizadas" />

    </group>
    <item android:title="Mi Cuenta">
        <menu>
            <item  android:id="@+id/my_info" android:icon="@android:drawable/ic_dialog_info" android:title="Mi información" />
            <item  android:id="@+id/my_settings" android:icon="@android:drawable/ic_menu_preferences" android:title="Mis Ajustes" />

            <item  android:id="@+id/menu_logout" android:icon="@android:drawable/ic_menu_revert" android:title="Cerrar Sesión" />
        </menu>
    </item>
</menu>
